Added .env for environment variable set up

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 spring.application.name=backend
-# Enable H2 in-memory database
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:h2:mem:jobApplicationDB
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-#spring.sql.init.mode=never
 
-# Show SQL statements in console
+# Use environment variable or default to H2
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO:create-drop}
+spring.datasource.url=${DB_URL:jdbc:h2:mem:jobApplicationDB}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DB_USERNAME:sa}
+spring.datasource.password=${DB_PASSWORD:}
+
+# Initialization
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 
-# Auto-create schema from JPA Entities
-#spring.jpa.hibernate.ddl-auto=update
-
-# Allow loading schema/data files
-spring.datasource.initialization-mode=always
-
-# Enable H2 console (for browser access at /h2-console)
+# H2 Console
 spring.h2.console.enabled=true
+server.port=${PORT:8080}
